force-app/main/default/objects/Lead/fields/Abstrakt_Interest__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Interest__c</fullName>
    <description>This is used on the contact us form page on the website.</description>
    <inlineHelpText>This is used on the contact us form page on the website.</inlineHelpText>
    <label>Abstrakt Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Direct Marketing</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Search Engine Marketing</fullName>
            </value>
            <value>
                <fullName>Search Engine Optimization</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Traditional Media</fullName>
            </value>
            <value>
                <fullName>Video Production</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Agency Services</fullName>
            </value>
            <value>
                <fullName>Web Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>