force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SEO Records</relationshipLabel>
    <relationshipName>SEORecords</relationshipName>
    <type>Lookup</type>
</CustomField>