force-app/main/default/objects/Lead/fields/Account_Form_Input__c.field-meta.xml
<CustomField>
    <fullName>Account_Form_Input__c</fullName>
    <label>Account Form Input</label>
    <length>50</length>
    <type>Text</type>
</CustomField>