force-app/main/default/objects/Lead/fields/Address_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation_Status__c</fullName>
    <label>Address Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>