force-app/main/default/objects/Lead/fields/Address_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation_Timestamp__c</fullName>
    <label>Address Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>