force-app/main/default/objects/Lead/fields/Buyer_s_Guide_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Guide_Chosen__c</fullName>
    <label>Buyer&apos;s Guide Chosen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Scale-out Storage</fullName>
            </value>
            <value>
                <fullName>Midrange Array</fullName>
            </value>
            <value>
                <fullName>Midrange Unified Storage Array</fullName>
            </value>
            <value>
                <fullName>Virtual Server Backup Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>