force-app/main/default/objects/Lead/fields/crit__ci_id__c.field-meta.xml
<CustomField>
    <fullName>crit__ci_id__c</fullName>
    <description>real sf id</description>
    <formula>&quot;deprecated&quot;</formula>
    <label>deprecated</label>
    <type>Text</type>
</CustomField>