force-app/main/default/objects/Lead/fields/Disqual_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqual_Reason__c</fullName>
    <inlineHelpText>Custom field that tracks why this lead is lost</inlineHelpText>
    <label>Disqual/Archive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>No Power</fullName>
            </value>
            <value>
                <fullName>Lack of Vision</fullName>
            </value>
            <value>
                <fullName>Never Reached</fullName>
            </value>
            <value>
                <fullName>Wrong Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>