force-app/main/default/objects/Lead/fields/Email_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Message__c</fullName>
    <label>Email Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>