force-app/main/default/objects/Lead/fields/Email_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Timestamp__c</fullName>
    <label>Email Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>