force-app/main/default/objects/Lead/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <inlineHelpText>This is an example of a custom multi-select picklist where you can select multiple options.</inlineHelpText>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product 1</fullName>
            </value>
            <value>
                <fullName>Product 2</fullName>
            </value>
            <value>
                <fullName>Product 3</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>