force-app/main/default/objects/Lead/fields/Last_Activity_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Datetime__c</fullName>
    <description>The datetime of the most recently added Activity.</description>
    <label>Last Activity Datetime</label>
    <type>DateTime</type>
</CustomField>