force-app/main/default/objects/Lead/fields/Lead_Generated_from_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generated_from_LinkedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Generated from LinkedIn</label>
    <type>Checkbox</type>
</CustomField>