force-app/main/default/objects/Lead/fields/MHN_Info_Requested__c.field-meta.xml
<CustomField>
    <fullName>MHN_Info_Requested__c</fullName>
    <label>MHN Info Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bins</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Carts</fullName>
            </value>
            <value>
                <fullName>Casters</fullName>
            </value>
            <value>
                <fullName>Chairs &amp; Stools</fullName>
            </value>
            <value>
                <fullName>Conveyor Systems</fullName>
            </value>
            <value>
                <fullName>Cranes</fullName>
            </value>
            <value>
                <fullName>Dock Equipment</fullName>
            </value>
            <value>
                <fullName>Dollies</fullName>
            </value>
            <value>
                <fullName>Drums &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Fans</fullName>
            </value>
            <value>
                <fullName>Fork Lifts &amp; Attachments</fullName>
            </value>
            <value>
                <fullName>Hoist &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Hoppers</fullName>
            </value>
            <value>
                <fullName>Hydraulic Dumpers</fullName>
            </value>
            <value>
                <fullName>Ladders</fullName>
            </value>
            <value>
                <fullName>Material Handling Equipment</fullName>
            </value>
            <value>
                <fullName>Matting</fullName>
            </value>
            <value>
                <fullName>Mezzanines</fullName>
            </value>
            <value>
                <fullName>Modular Buildings</fullName>
            </value>
            <value>
                <fullName>Modular Offices</fullName>
            </value>
            <value>
                <fullName>Pallets &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Partitions &amp; Barriers</fullName>
            </value>
            <value>
                <fullName>Rack Systems</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Scales</fullName>
            </value>
            <value>
                <fullName>Security Equipment</fullName>
            </value>
            <value>
                <fullName>Shelving</fullName>
            </value>
            <value>
                <fullName>Shipping Supplies</fullName>
            </value>
            <value>
                <fullName>Strapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>