force-app/main/default/objects/Lead/fields/Mobile_Phone_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Validation_Message__c</fullName>
    <label>Mobile Phone Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>