force-app/main/default/objects/Lead/fields/Mobile_Phone_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Validation_Status__c</fullName>
    <label>Mobile Phone Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>