force-app/main/default/objects/Lead/fields/Mobile_Phone_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Validation_Timestamp__c</fullName>
    <label>Mobile Phone Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>