force-app/main/default/objects/Lead/fields/Phone_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation_Message__c</fullName>
    <label>Phone Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>