force-app/main/default/objects/Lead/fields/Phone_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation_Status__c</fullName>
    <label>Phone Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>