force-app/main/default/objects/Lead/fields/Phone_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation_Timestamp__c</fullName>
    <label>Phone Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>