force-app/main/default/objects/Lead/fields/Product_or_Service_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_or_Service_of_Interest__c</fullName>
    <label>Product or Service of Interest?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual BDC</fullName>
            </value>
            <value>
                <fullName>Service Retention and Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>