force-app/main/default/objects/Lead/fields/Referring_URL__c.field-meta.xml
<CustomField>
    <fullName>Referring_URL__c</fullName>
    <description>Originating URL for leads from the website.</description>
    <inlineHelpText>The URL the lead was on before filling out the form.</inlineHelpText>
    <label>Referring URL</label>
    <type>Url</type>
</CustomField>