force-app/main/default/objects/Lead/fields/smagicinteract__SMSOptOut__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMSOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>