force-app/main/default/objects/Lead/fields/Source_Industry__c.field-meta.xml
<CustomField>
    <fullName>Source_Industry__c</fullName>
    <description>Pulled from ZoomInfo list of industries. Used to track the client&apos;s actual industry.</description>
    <label>Source Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Industry</valueSetName>
    </valueSet>
</CustomField>