force-app/main/default/objects/Lead/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <formula>IMAGE(CASE( Rating, &quot;Very Cold&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;Cold&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;,&quot;Hot&quot;, &quot;/img/samples/stars_400.gif&quot;,&quot;/img/samples/stars_500.gif&quot;),&quot;Rating&quot;)</formula>
    <inlineHelpText>This is a sample formula field that displays stars based on the lead&apos;s rating.</inlineHelpText>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>