force-app/main/default/objects/Lead/fields/synety__Call_Mobile__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Mobile__c</fullName>
    <formula>if(MobilePhone != &quot;&quot;, HYPERLINK(&apos;/apex/synety__ContactPhone?id=&apos;+Id+&apos;&amp;pn=&apos;+SUBSTITUTE(MobilePhone, &quot;+&quot;, &quot;%2B&quot;), MobilePhone + &quot;&quot; + IMAGE(&quot;/resource/synety__tinyPhoneIcon&quot;,
&quot;Click to Call&quot;), &apos;_blank&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Mobile</label>
    <type>Text</type>
</CustomField>