force-app/main/default/objects/Lead/fields/Which_Best_Describes_You__c.field-meta.xml
<CustomField>
    <fullName>Which_Best_Describes_You__c</fullName>
    <label>Which Best Describes You?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Analyst/Press/Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>