force-app/main/default/objects/Lead/recordTypes/Abstrakt_Web_Lead.recordType-meta.xml
<RecordType>
    <fullName>Abstrakt_Web_Lead</fullName>
    <active>true</active>
    <businessProcess>Abstrakt</businessProcess>
    <label>Abstrakt Web Lead</label>
</RecordType>