force-app/main/default/objects/Lead/recordTypes/DCIG_Lead.recordType-meta.xml
<RecordType>
    <fullName>DCIG_Lead</fullName>
    <active>true</active>
    <businessProcess>Abstrakt</businessProcess>
    <label>DCIG Lead</label>
</RecordType>