force-app/main/default/objects/Lead/recordTypes/EmailOptIn.recordType-meta.xml
<RecordType>
    <fullName>EmailOptIn</fullName>
    <active>true</active>
    <businessProcess>Abstrakt</businessProcess>
    <description>Used for customers to opt in to marketing emails via web-to-lead which then updates contact by trigger</description>
    <label>EmailOptIn</label>
</RecordType>