force-app/main/default/objects/Lead/recordTypes/Freedom_Honda_Car_Giveaway.recordType-meta.xml
<RecordType>
    <fullName>Freedom_Honda_Car_Giveaway</fullName>
    <active>true</active>
    <businessProcess>Freedom Honda</businessProcess>
    <description>This is to be used for the Freedom Honda Car Giveaway</description>
    <label>Freedom Honda Car Giveaway</label>
</RecordType>