force-app/main/default/objects/Lead/recordTypes/Material_Handling_Web_Lead.recordType-meta.xml
<RecordType>
    <fullName>Material_Handling_Web_Lead</fullName>
    <active>true</active>
    <businessProcess>Material Handling</businessProcess>
    <description>For use with Material Handling Web Leads</description>
    <label>Material Handling Web Lead</label>
</RecordType>