force-app/main/default/objects/Lead/listViews/AAM_Offer.listView-meta.xml
<ListView>
    <fullName>AAM_Offer</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>AAM Offer</value>
    </filters>
    <label>AAM Offer</label>
    <sharedTo>
        <role>Executive_Sales_Rep</role>
    </sharedTo>
</ListView>